--- a/GCET/1index.html
+++ b/GCET/1index.html
@@ -81,7 +81,7 @@
 Located in Jammu, the historic “City of Temples,” the college provides a vibrant learning atmosphere with experienced faculty, modern infrastructure, and active industry linkages. Its mission is to foster academic excellence, diversity, and community spirit while inculcating an entrepreneurial mindset among students.
 
 GCET continues to empower future engineers with knowledge, innovation, and ethics, preparing them to meet global challenges and serve society with distinction.</p>
-              <a  class="btn btn2" href="https://gcetj.ac.in/">Main Website</a>
+              <a  class="btn btn2" href="https://gcetj.ac.in/">Explore GCET</a>
 
           </div>
 
