--- a/GCET/2notificationspage.html
+++ b/GCET/2notificationspage.html
@@ -15,8 +15,8 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Epunda+Slab:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="notificationspage.css">
   <link rel="stylesheet" href="navbar.css">
-  <link rel="stylesheet" href="notify.css">
   
   <title>Notifications</title>
 </head>
@@ -74,14 +74,73 @@
         <a class="btn btn1" href="">Login</a>
        </div>
        </div>
-       <div class="subcontainer2">
-        <div class="hdrs">
-          <p class="hdrstxt">TYPE</p>
-          <p class="hdrstxt">NOTIFICATION</p>
-          <p class="hdrstxt">DATE</p>
+       <div class="mntxt">
+        <h2>All Notifications</h2>
+        <p class="subheading">Results, Admissions, Registration and Admit card related examination notices</p>
+       </div>
+      <div class="subcontainer3">
+         <div class="hdrs">
+           <p class="hdrstxt">TYPE</p>
+           <p class="hdrstxt">TITLE</p>
+           <p class="hdrstxt">DATE</p>
+         </div>
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">ADMISSION NOTICE FOR B.TECH. 7TH/5TH/3RD SEMESTERS (BATCHES 2022, 2023 & 2024)</p>
+          <p class="notifytxt">June 14, 2025</p>
         </div>
-
-       </div>      
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">B.TECH 2ND SEMESTER (REGULAR & REAPPEAR) ADMIT CARDS PUBLISHED !! DOWNLOAD NOW !!</p>
+          <p class="notifytxt">June 9, 2025</p>
+        </div>
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">B.TECH 4TH SEMESTER (REGULAR & REAPPEAR) ADMIT CARDS PUBLISHED !! DOWNLOAD NOW !!</p>
+          <p class="notifytxt">June 02, 2025</p>
+        </div>
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">ADMIT CARDS OF BTECH 6TH SEMESTER ARE NOW AVAILABLE</p>
+          <p class="notifytxt">May 28, 2025</p>
+        </div>    
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">ADMIT CARDS OF BTECH 6TH SEMESTER ARE NOW AVAILABLE</p>
+          <p class="notifytxt">May 28, 2025</p>
+        </div>     
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">BACKLOG EXAM FORM – 4TH & 2ND SEM</p>
+          <p class="notifytxt">May 28, 2025</p>
+        </div>     
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">B.TECH 6TH SEMESTER (CBS REGULAR) EXAMINATIONS RESCHEDULED</p>
+          <p class="notifytxt">May 16, 2025</p>
+        </div>     
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">DATE SHEET OF B.TECH 2ND SEMESTER</p>
+          <p class="notifytxt">April 21, 2025</p>
+        </div>     
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">DATE SHEET OF B.TECH 4TH SEMESTER</p>
+          <p class="notifytxt">April 21, 2025</p>
+        </div>    
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">DATESHEET OF B.TECH 6TH SEMESTER</p>
+          <p class="notifytxt">April 21, 2025</p>
+        </div>  
+        <div class="notifyinfo">
+          <p class="notifytxt">PDF</p>
+          <p class="notifytxt">CONFERMENT OF AUTONOMOUS STATUS TO GCET JAMMU</p>
+          <p class="notifytxt">April 17, 2025</p>
+        </div>                   
+  
+       </div>    
     </div>
 
   </div>
