--- a/GCET/3noticepage.html
+++ b/GCET/3noticepage.html
@@ -15,6 +15,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Epunda+Slab:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="noticepage.css">
   <link rel="stylesheet" href="navbar.css">
   
   <title>notice board</title>
@@ -58,6 +59,21 @@
           <a href=""><p>Log out</p></a>
         </div>
       </div>
+    </div>
+    <div class="maincontainer2">
+             <div class="subcontainer1">
+       <div class="minicontainer1">
+        <img class="sub1img" src="https://coe.gcetj.ac.in/assets/img/gcetlogo.png" alt="">
+        <div class="sub1txt">
+          <p class="sub1txt1">Controller of examinations</p>
+          <p class="sub1txt2">Government College of Engineering & Technology, Jammu</p>
+          <p class="sub1txt3">(AUTONOMOUS COLLEGE)</p>
+        </div>
+       </div>
+       <div class="minicontainer2">
+        <a class="btn btn1" href="">Login</a>
+       </div>
+       </div>
     </div>
 
   </div>
