--- a/GCET/4aboutuspage.html
+++ b/GCET/4aboutuspage.html
@@ -15,6 +15,7 @@
    <link rel="preconnect" href="https://fonts.googleapis.com">
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Epunda+Slab:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="aboutuspage.css">
   <link rel="stylesheet" href="navbar.css">
   
   <title>about us</title>
@@ -59,6 +60,95 @@
         </div>
       </div>
     </div>
+    <div class="maincontainer2">
+             <div class="subcontainer1">
+       <div class="minicontainer1">
+        <img class="sub1img" src="https://coe.gcetj.ac.in/assets/img/gcetlogo.png" alt="">
+        <div class="sub1txt">
+          <p class="sub1txt1">Controller of examinations</p>
+          <p class="sub1txt2">Government College of Engineering & Technology, Jammu</p>
+          <p class="sub1txt3">(AUTONOMOUS COLLEGE)</p>
+        </div>
+       </div>
+       <div class="minicontainer2">
+        <a class="btn btn1" href="">Login</a>
+       </div>
+       </div>
+       <div class="subcontainer2">
+        <div class="courses-offered">
+          <h1 class="co">COURSES</h1>
+          <h2 class="cosubh">Undergraduate Courses:</h2>
+          <p class="cosub">
+            GCET Jammu offere Bachelor of Engineering(B.Tech) degrees in the following disciplines:</p>
+            <ul class="ugcourses">
+              <li><p>1.Computer Engineering</p></li>
+              <li><p>2.Mechanincal Engineering</p> </li>
+              <li><p>3.Civil Engineering</p></li>
+              <li><p>4.Electronics and Communication Engineering</p></li>
+              <li><p>5.Electrical Engineering</p></li>
+            </ul>
+            <h2 class="cosubh">Post Graduate Courses:</h2>
+            <p class="cosub">GCET Jammu offers M.Tech programs in:</p>
+            <ul class="pgcourses">
+              <li><p>1.Mechanincal Engineering</p></li>
+              <li><p>2.Computer Engineering</p></li>
+              <li><p>3.Electronics and Communication Engineering</p></li>
+            </ul>
+            <p class="cosub">Candidates must have a B.E/B.tech dgree with atleast 60% marks and a valid GATE Score</p>
+        </div>
+        <div class="admission-process">
+          <h1 class="co">ADMISSION</h1>
+        <p class="cosub">
+Admissions are based on the Common Entrance Test (JKCET) conducted by the Jammu and Kashmir Board of Professional Entrance Examinations (BOPEE). Candidates must have completed 10+2 with Physics, Chemistry, Mathematics, and English, securing at least 50% marks (40% for SC/ST categories).</p>
+        </div>
+        <div class="whanda">
+          <div class="Working-hours">
+            <h1 cosubh>WORKING HOURS</h1>
+           <div class="dnt">
+            <p>Monday</p>
+            <p>9am-5am</p>
+           </div>
+                      <div class="dnt">
+            <p>Tuesday</p>
+            <p>9am-5am</p>
+           </div>
+                      <div class="dnt">
+            <p>Wednesday</p>
+            <p>9am-5am</p>
+           </div>
+                      <div class="dnt">
+            <p>Thursday</p>
+            <p>9am-5am</p>
+           </div>
+                      <div class="dnt">
+            <p>Friday</p>
+            <p>9am-5am</p>
+           </div>
+                      <div class="dnt">
+            <p>Saturday</p>
+            <p>Closed</p>
+           </div>
+                      <div class="dnt">
+            <p>Sunday</p>
+            <p>Closed</p>
+           </div>
+          </div>
+          <div class="Adress">
+            <h1 class="cosubh"> ADDRESS</h1>
+            <p class="cosub">
+              GOVERNMENT COLLEGE OF ENGINEERING AND TECHNOLOGY,
+CHAK BHALWAL, JAMMU-181122
+            </p>
+            <p class="cosub">EXAMINATION CELL</p>
+            <p class="cosub">Email: <a class="email" href="">exam@gcetj.ac.in</a></p>
+            <a class="btn btn1" href="https://www.google.com/maps/place/Government+College+of+Engineering+%26+Technology/@32.8509848,74.7784356,16.03z/data=!4m7!3m6!1s0x391e880726d57f9b:0xa9286ffb496b669d!4b1!8m2!3d32.8508123!4d74.7786828!16s%2Fm%2F0ddhq5j?entry=tts&g_ep=EgoyMDI1MDMxOC4wIPu8ASoASAFQAw%3D%3D" target="_blank">Location</a>
+          </div>  
+          
+               
+        </div>
+
+       </div>
+    </div>    
 
   </div>
 </body>
