--- a/Da-Social-Network/index.html
+++ b/Da-Social-Network/index.html
@@ -70,7 +70,7 @@
             <!-- <button class="deletebtn"><img style="width: 3rem;" src="https://www.svgrepo.com/show/500535/delete.svg" alt=""></button> -->
              
           </div>
-          <p class="mainmessage">Ladies and Gentleman,this is the DaSocialNetwork ofcourse a lot of work still need to be done but you get the idea </p>
+          <p class="mainmessage">  This is the DaSocialNetwork ofcourse a lot of work still needs to be done #workunderconstruction. </p>
           <div class="messagebuttons">
             <button id="likes" class="messagebuttons1 likes1" style="display: inline-flex; justify-content: center; align-items: center; gap: 0.3rem;"  ><img style="width: 2.5rem;" src="https://www.svgrepo.com/show/451384/thumbs-up.svg" alt=""> <p class="counter">0</p> Likes</button>
             <button  id="dislikes"  class="messagebuttons1 dislikes1" style="display: inline-flex; justify-content: center; align-items: center; gap: 0.3rem;"><img style="width: 2.5rem;" src="https://www.svgrepo.com/show/451383/thumbs-down.svg" alt="">  <p class="counter">0</p>  DisLikes</button>
@@ -156,3 +156,4 @@
 </body>
 <script src="script.js"></script>
 </html>
+
